--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
      <div class="hz">
       <div>
             <p class="skills"><b>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤSkiing</b>⚫⚫⚫⚫⚫⚫⚫🟣🟣🟣</p>
-            <p class="skills"><b>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤLinguistic</b>ㅤ⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫</p>
-            <p class="skills"><b>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤCoding</b>ㅤ⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫</p>
+            <p class="skills"><b>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤLinguistic</b>ㅤ⚫⚫⚫⚫⚫⚫⚫⚫🟣🟣</p>
+            <p class="skills"><b>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤCoding</b>ㅤ⚫⚫⚫⚫⚫🟣🟣🟣🟣🟣</p>
             <p class="skills"><b>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤMath</b>ㅤ⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫</p>
       </div>
       <div>
-            <p class="skills"><b>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤC++ㅤㅤㅤ</b>  ⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫</p>
+            <p class="skills"><b>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤC++ㅤㅤㅤ</b>  ⚫⚫⚫⚫🟣🟣🟣🟣🟣🟣</p>
             <p class="skills"><b>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤMinecraft</b>ㅤ⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫</p>
             <p class="skills"><b>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤMinecraft</b>ㅤ⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫</p>
             <p class="skills"><b>ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤMinecraft</b>ㅤ⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫</p>
