--- a/index.html
+++ b/index.html
@@ -1,96 +1,63 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kasym's site</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="navbar">
-        <img class="logo" src="logo.jpeg" alt="Logo">
-        <a class="link" href="#"><b>Home</b></a>
-        <a class="link" href="#aboutme"><b>About me</b></a>
-        <a class="link" href="#myskills"><b>My skills</b></a>
-        <a class="link" href="#myprojects"><b>My projects</b></a>
-        <a class="link" href="https://youtu.be/dQw4w9WgXcQ?si=hZkkEkm_vnjHPa3o"><b>Contact me</b></a>
-    </section>
+    <nav class="navbar">
+        <img class="logo" src="logo.jpeg">
+        <a class="link" href="#">Home</a>
+        <a class="link" href="#aboutme">About me</a>
+        <a class="link" href="#myskills">Skills</a>
+        <a class="link" href="#myprojects">Projects</a>
+    </nav>
 
     <section class="aboutme" id="home">
         <div class="korobka">
             <div>
-                <h2>Genius, playboy, philantropist, millioner</h2>
+                <h2>Genius, playboy, philantropist</h2>
                 <h1>Kasym</h1>
                 <h2>Student of NSPM</h2>
             </div>
-            <div>
-                <img src="Kasymphoto.jpeg" alt="Kasym's photo">
-            </div>
+            <img src="Kasymphoto.jpeg">
         </div>
     </section>
 
     <h1 class="text" id="aboutme">About me</h1>
     <div class="hcenter">
-        <div class="korobka"> 
-            <div>
-                <img src="skiing.jpeg" class="narrator" alt="Skiing photo">
-            </div>
-            <p class="history">
-                Morbi leo mi, nonummy eget, tristique non, rhoncus non, leo. Nullam faucibus mi quis velit. 
-                Integer in sapien. Fusce tellus odio, dapibus id, fermentum quis, suscipit id, erat. 
-                Fusce aliquam vestibulum ipsum. Aliquam erat volutpat. Pellentesque sapien.
-            </p>
+        <div class="korobka">
+            <img src="skiing.jpeg" class="narrator">
+            <p class="history">Morbi leo mi, nonummy eget, tristique non, rhoncus non, leo. Nullam faucibus mi quis velit. Integer in sapien. Fusce tellus odio, dapibus id.</p>
         </div>
     </div>
-
-    <img class="sphere1" src="sphere.png" alt="Decoration">
 
     <section class="Myskills" id="myskills">
         <h1>My skills</h1>
         <div class="hz">
             <div>
-                <p class="skills"><b>Skiing</b> ⚫⚫⚫⚫⚫⚫⚫🟣🟣🟣</p>
-                <p class="skills"><b>Linguistic</b> ⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫</p>
-                <p class="skills"><b>Coding</b> ⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫</p>
-                <p class="skills"><b>Math</b> ⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫</p>
+                <p class="skills"><b>Skiing</b> ⚫⚫⚫⚫⚫⚫⚫🟣🟣</p>
+                <p class="skills"><b>Coding</b> ⚫⚫⚫⚫⚫⚫⚫⚫⚫</p>
             </div>
             <div>
-                <p class="skills"><b>C++</b> ⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫</p>
-                <p class="skills"><b>Minecraft</b> ⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫</p>
-                <p class="skills"><b>Problem Solving</b> ⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫</p>
-                <p class="skills"><b>Gaming</b> ⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫</p>
+                <p class="skills"><b>C++</b> ⚫⚫⚫⚫⚫⚫⚫⚫⚫</p>
+                <p class="skills"><b>Math</b> ⚫⚫⚫⚫⚫⚫⚫⚫⚫</p>
             </div>
         </div>
     </section>
 
-    <div class="myprojects1" id="myprojects">
-        <h1 class="baba">My projects</h1>
-    </div>
-
+    <div class="myprojects1" id="myprojects"><h1>My projects</h1></div>
     <section class="myprojects">
         <div>
-            <h2 class="de1">UMAI</h2>
-            <div class="project1">
-                <img class="sample" src="umai1.jpeg" alt="UMAI Project">
-                <p class="text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vitae lobortis quam, quis ultricies risus. Nunc vel placerat ipsum. Pellentesque ut nunc maximus, sollicitudin neque ultrices, posuere nibh. </p>
-            </div>
+            <h2>UMAI</h2>
+            <div class="project1"><img class="sample" src="umai1.jpeg"><p class="text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></div>
         </div>
-
         <div>
-            <h2 class="de2">IELTS C1</h2>
-            <div class="project2">
-                <img class="sample" src="ieltsres.jpeg" alt="IELTS Result">
-                <p class="text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vitae lobortis quam, quis ultricies risus. Nunc vel placerat ipsum. Pellentesque ut nunc maximus, sollicitudin neque ultrices, posuere nibh. </p>
-            </div>
-        </div>
-
-        <div>
-            <h2 class="de3">Game in C++</h2>
-            <div class="project3">
-                <img class="sample" src="epstein.jpeg" alt="Game Project">
-                <p class="text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vitae lobortis quam, quis ultricies risus. Nunc vel placerat ipsum. Pellentesque ut nunc maximus, sollicitudin neque ultrices, posuere nibh. </p>
-            </div>
+            <h2>IELTS C1</h2>
+            <div class="project2"><img class="sample" src="ieltsres.jpeg"><p class="text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></div>
         </div>
     </section>
-</body>  
+</body>
 </html>
