--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
     <nav class="navbar">
         <img class="logo" src="logo.jpeg">
         <a class="link" href="#">Home</a>
-        <a class="link" href="#aboutme">About me</a>
+        <a class="link" href="#aboutme">About</a>
         <a class="link" href="#myskills">Skills</a>
         <a class="link" href="#myprojects">Projects</a>
     </nav>
@@ -18,7 +18,7 @@
     <section class="aboutme" id="home">
         <div class="korobka">
             <div>
-                <h2>Genius, playboy, philantropist</h2>
+                <h2>Genius, Philanthropist</h2>
                 <h1>Kasym</h1>
                 <h2>Student of NSPM</h2>
             </div>
@@ -30,33 +30,38 @@
     <div class="hcenter">
         <div class="korobka">
             <img src="skiing.jpeg" class="narrator">
-            <p class="history">Morbi leo mi, nonummy eget, tristique non, rhoncus non, leo. Nullam faucibus mi quis velit. Integer in sapien. Fusce tellus odio, dapibus id.</p>
+            <p class="history">Morbi leo mi, nonummy eget, tristique non, rhoncus non, leo. Nullam faucibus mi quis velit. Integer in sapien. Fusce tellus odio.</p>
         </div>
     </div>
 
     <section class="Myskills" id="myskills">
-        <h1>My skills</h1>
         <div class="hz">
-            <div>
-                <p class="skills"><b>Skiing</b> ⚫⚫⚫⚫⚫⚫⚫🟣🟣</p>
-                <p class="skills"><b>Coding</b> ⚫⚫⚫⚫⚫⚫⚫⚫⚫</p>
-            </div>
-            <div>
-                <p class="skills"><b>C++</b> ⚫⚫⚫⚫⚫⚫⚫⚫⚫</p>
-                <p class="skills"><b>Math</b> ⚫⚫⚫⚫⚫⚫⚫⚫⚫</p>
-            </div>
+            <p class="skills"><b>Coding</b> ⚫⚫⚫⚫⚫</p>
+            <p class="skills"><b>Math</b> ⚫⚫⚫⚫⚫</p>
+            <p class="skills"><b>C++</b> ⚫⚫⚫⚫⚫</p>
+            <p class="skills"><b>Skiing</b> ⚫⚫⚫⚫⚪</p>
         </div>
     </section>
 
-    <div class="myprojects1" id="myprojects"><h1>My projects</h1></div>
+    <div class="myprojects1" id="myprojects"><h1>Projects</h1></div>
     <section class="myprojects">
         <div>
-            <h2>UMAI</h2>
-            <div class="project1"><img class="sample" src="umai1.jpeg"><p class="text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></div>
+            <div class="project1">
+                <img class="sample" src="umai1.jpeg">
+                <div class="text1">
+                    <h3>UMAI</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vitae lobortis quam.</p>
+                </div>
+            </div>
         </div>
         <div>
-            <h2>IELTS C1</h2>
-            <div class="project2"><img class="sample" src="ieltsres.jpeg"><p class="text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></div>
+            <div class="project2">
+                <img class="sample" src="ieltsres.jpeg">
+                <div class="text1">
+                    <h3>IELTS C1</h3>
+                    <p>Nunc vel placerat ipsum. Pellentesque ut nunc maximus, sollicitudin neque ultrices.</p>
+                </div>
+            </div>
         </div>
     </section>
 </body>
